tests/grammar/snapshots/r#mod__grammar__alpha034__semicolon-2.snap
---
source: tests/grammar/alpha034.rs
expression: "parse(\"1; 2;\").unwrap()"
---
(
    Statement(
        [
            (
                Expression(
                    (
                        Number(
                            (
                                1.0,
                                0..1,
                            ),
                        ),
                        0..1,
                    ),
                ),
                0..2,
            ),
            (
                Expression(
                    (
                        Number(
                            (
                                2.0,
                                3..4,
                            ),
                        ),
                        3..4,
                    ),
                ),
                3..5,
            ),
        ],
    ),
    0..5,
)
