tests/grammar/snapshots/r#mod__grammar__alpha034__semicolon-3.snap
---
source: tests/grammar/alpha034.rs
expression: "parse(\"\n        main {\n            echo 10;\n            echo 20\n\n            echo 30;\n\n            10 20 30\n        }\n    \").unwrap()"
---
(
    Main(
        [
            (
                Echo(
                    (
                        Number(
                            (
                                10.0,
                                33..35,
                            ),
                        ),
                        33..35,
                    ),
                ),
                28..36,
            ),
            (
                Echo(
                    (
                        Number(
                            (
                                20.0,
                                54..56,
                            ),
                        ),
                        54..56,
                    ),
                ),
                49..56,
            ),
            (
                Echo(
                    (
                        Number(
                            (
                                30.0,
                                75..77,
                            ),
                        ),
                        75..77,
                    ),
                ),
                70..78,
            ),
            (
                Expression(
                    (
                        Number(
                            (
                                10.0,
                                92..94,
                            ),
                        ),
                        92..94,
                    ),
                ),
                92..94,
            ),
            (
                Expression(
                    (
                        Number(
                            (
                                20.0,
                                95..97,
                            ),
                        ),
                        95..97,
                    ),
                ),
                95..97,
            ),
            (
                Expression(
                    (
                        Number(
                            (
                                30.0,
                                98..100,
                            ),
                        ),
                        98..100,
                    ),
                ),
                98..100,
            ),
        ],
    ),
    9..110,
)
