tests/grammar/snapshots/r#mod__grammar__alpha034__shorthands-3.snap
---
source: tests/grammar/alpha034.rs
expression: "parse(\"a *= 10\").unwrap()"
---
Statement(
    [
        Statement(
            Statement(
                ShorthandMul(
                    "a",
                    (),
                    Number(
                        10.0,
                    ),
                ),
                None,
            ),
        ),
    ],
)
