tests/grammar/snapshots/r#mod__grammar__alpha034__shorthands-4.snap
---
source: tests/grammar/alpha034.rs
expression: "parse(\"a /= 10\").unwrap()"
---
Statement(
    [
        ShorthandDiv(
            "a",
            Number(
                10.0,
            ),
        ),
    ],
)
