tests/grammar/snapshots/r#mod__grammar__alpha034__subtract.snap
---
source: tests/grammar/alpha034.rs
expression: "parse(\"1 - 2\").unwrap()"
---
Statement(
    [
        Expression(
            Subtract(
                Number(
                    1.0,
                ),
                Number(
                    2.0,
                ),
            ),
        ),
    ],
)
