tests/grammar/snapshots/r#mod__grammar__alpha034__ternary-2.snap
---
source: tests/grammar/alpha034.rs
expression: "parse(\"true then 1 + 2 else 2 + 1\").unwrap()"
---
Statement(
    [
        Expression(
            Ternary(
                Boolean(
                    true,
                ),
                Add(
                    Number(
                        1.0,
                    ),
                    Number(
                        2.0,
                    ),
                ),
                Add(
                    Number(
                        2.0,
                    ),
                    Number(
                        1.0,
                    ),
                ),
            ),
        ),
    ],
)
